--- a/climate_starter.ipynb
+++ b/climate_starter.ipynb
@@ -353,19 +353,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# design a query to show how many stations are available in this dataset?\n"
+    "# design a query to show how many stations are available in this dataset?\n",
+    "station_count = session.query(func.count(Station.id)).all()[0][0]\n",
+    "print(station_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>row_count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>station</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>USC00519281</th>\n",
+       "      <td>2772</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00519397</th>\n",
+       "      <td>2724</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00513117</th>\n",
+       "      <td>2709</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00519523</th>\n",
+       "      <td>2669</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00516128</th>\n",
+       "      <td>2612</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00514830</th>\n",
+       "      <td>2202</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00511918</th>\n",
+       "      <td>1979</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00517948</th>\n",
+       "      <td>1372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>USC00518838</th>\n",
+       "      <td>511</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             row_count\n",
+       "station               \n",
+       "USC00519281       2772\n",
+       "USC00519397       2724\n",
+       "USC00513117       2709\n",
+       "USC00519523       2669\n",
+       "USC00516128       2612\n",
+       "USC00514830       2202\n",
+       "USC00511918       1979\n",
+       "USC00517948       1372\n",
+       "USC00518838        511"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most active stations by row count listed in desc order\n",
+    "stations = session.query(func.count(Measurement.id).label(\"row_count\"), Measurement.station).group_by(Measurement.station).all()\n",
+    "stations_df = pd.DataFrame(most_active).sort_values(by=[\"row_count\"], ascending=False).set_index(\"station\")\n",
+    "stations_df"
+   ]
   },
   {
    "cell_type": "code",
@@ -390,9 +493,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Design a query to show how many stations are available in this dataset?"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -418,10 +519,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# What are the most active stations? (i.e. what stations have the most rows)?\n",
-    "# List the stations and the counts in descending order.\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
